2018-02-12  Zack Weinberg  <zackw@panix.com>

	[BZ #19239]
	* posix/sys/types.h: Don't include sys/sysmacros.h.
	* misc/sys/sysmacros.h: Remove the conditional deprecation
	warnings for the macros defined by this header.

2018-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #23196]
	* string/test-memcpy.c (do_test1): New function.
	(test_main): Call it.

2018-05-23  Andreas Schwab  <schwab@suse.de>

	[BZ #23196]
	CVE-2018-11237
	* sysdeps/x86_64/multiarch/memmove-avx512-no-vzeroupper.S
	(L(preloop_large)): Save initial destination pointer in %r11 and
	use it instead of %rax after the loop.
	* string/test-mempcpy.c (MIN_PAGE_SIZE): Define.

2018-05-11  Florian Weimer  <fweimer@redhat.com>

	[BZ #23166]
	* include/rpc/clnt.h (rpc_createerr): Declare hidden alias.
	* include/rpc/svc.h (svc_pollfd, svc_max_pollfd, svc_fdset):
	Likewise.
	* sunrpc/rpc_common.c (svc_fdset, rpc_createerr, svc_pollfd)
	(svc_max_pollfd): Add nocommon attribute and hidden alias.  Do not
	export without --enable-obsolete-rpc.
	* sunrpc/svcauth_des.c (svcauthdes_stats): Turn into compatibility
	symbol.  This should not have been exported, ever.

2018-05-11  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #23152]
	* localedata/locales/gd_GB (abmon): Fix typo in May:
	"Mhàrt" -> "Cèit".  Adjust the comment according to the change.

2018-05-09  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #22786]
	CVE-2018-11236
	* stdlib/canonicalize.c (__realpath): Fix overflow in path length
	computation.
	* stdlib/Makefile (test-bz22786): New test.
	* stdlib/test-bz22786.c: New test.

2018-05-05  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #20419]
	* elf/dl-load.c (open_verify): Fix stack overflow.
	* elf/Makefile (tst-big-note): New test.
	* elf/tst-big-note-lib.S: New.
	* elf/tst-big-note.c: New.

2018-05-04  Stefan Liebler  <stli@linux.vnet.ibm.com>

	[BZ #23137]
	* sysdeps/nptl/lowlevellock.h (lll_wait_tid):
	Use atomic_load_acquire to load __tid.
